--- a/pagescustomers.html
+++ b/pagescustomers.html
@@ -1,118 +1,63 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>العملاء - ERPClone</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>العملاء - ERPClone</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-<body class="page-enter bg-light">
+<body class="bg-light">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
-        <div class="container-fluid">
-            <a class="navbar-brand fw-bold" href="../index.html">
-                <i class="fas fa-arrow-left me-2"></i> رجوع
-            </a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+    <div class="container-fluid">
+      <a class="navbar-brand fw-bold" href="index.html">
+        <i class="fas fa-arrow-left me-2"></i> رجوع للرئيسية
+      </a>
+    </div>
+  </nav>
+
+  <div class="container mt-5 page-enter">
+    <h3 class="text-primary mb-4"><i class="fas fa-users"></i> إدارة العملاء</h3>
+
+    <div class="card shadow-sm">
+      <div class="card-body">
+        <div class="table-responsive">
+          <table class="table table-hover">
+            <thead class="table-light">
+              <tr>
+                <th>الاسم</th>
+                <th>الهاتف</th>
+                <th>الرصيد</th>
+                <th>إجراء</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>أحمد محمد</td>
+                <td>01001234567</td>
+                <td class="text-success">5,200 ج.م</td>
+                <td><button class="btn btn-sm btn-danger"><i class="fas fa-trash"></i></button></td>
+              </tr>
+              <tr>
+                <td>فاطمة علي</td>
+                <td>01109876543</td>
+                <td class="text-danger">-800 ج.م</td>
+                <td><button class="btn btn-sm btn-danger"><i class="fas fa-trash"></i></button></td>
+              </tr>
+            </tbody>
+          </table>
         </div>
-    </nav>
-
-    <div class="container mt-5">
-        <h3 class="text-primary mb-4"><i class="fas fa-users"></i> إدارة العملاء</h3>
-
-        <div class="card shadow-sm mb-4">
-            <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table table-striped table-hover align-middle">
-                        <thead class="table-light">
-                            <tr>
-                                <th>الاسم</th>
-                                <th>الهاتف</th>
-                                <th>العنوان</th>
-                                <th>الإجراء</th>
-                            </tr>
-                        </thead>
-                        <tbody id="customerTable">
-                            <tr>
-                                <td>أحمد محمد</td>
-                                <td>01001234567</td>
-                                <td>القاهرة</td>
-                                <td><button class="btn btn-danger btn-sm" onclick="deleteRow(this)"><i class="fas fa-trash"></i> حذف</button></td>
-                            </tr>
-                            <tr>
-                                <td>فاطمة علي</td>
-                                <td>01109876543</td>
-                                <td>الجيزة</td>
-                                <td><button class="btn btn-danger btn-sm" onclick="deleteRow(this)"><i class="fas fa-trash"></i> حذف</button></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-
-        <div class="card shadow-sm">
-            <div class="card-body">
-                <h5 class="card-title"><i class="fas fa-user-plus me-2"></i> إضافة عميل جديد</h5>
-                <form class="row g-3" onsubmit="return false;">
-                    <div class="col-md-4">
-                        <input type="text" class="form-control" placeholder="الاسم الكامل" id="name">
-                    </div>
-                    <div class="col-md-4">
-                        <input type="text" class="form-control" placeholder="رقم الهاتف" id="phone">
-                    </div>
-                    <div class="col-md-4">
-                        <input type="text" class="form-control" placeholder="العنوان" id="address">
-                    </div>
-                    <div class="col-12">
-                        <button type="button" class="btn btn-success" onclick="addCustomer()">
-                            <i class="fas fa-save me-2"></i> حفظ العميل
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </div>
+      </div>
     </div>
 
-    <script src="../js/main.js"></script>
-    <script>
-        function addCustomer() {
-            const name = document.getElementById('name').value.trim();
-            const phone = document.getElementById('phone').value.trim();
-            const address = document.getElementById('address').value.trim();
+    <button class="btn btn-primary mt-3" data-bs-toggle="modal" data-bs-target="#addCustomer">
+      <i class="fas fa-plus"></i> إضافة عميل
+    </button>
+  </div>
 
-            if (!name || !phone) {
-                alert('يرجى إدخال الاسم ورقم الهاتف');
-                return;
-            }
-
-            const table = document.getElementById('customerTable');
-            const row = document.createElement('tr');
-            row.innerHTML = `
-                <td>${escapeHtml(name)}</td>
-                <td>${escapeHtml(phone)}</td>
-                <td>${escapeHtml(address)}</td>
-                <td><button class="btn btn-danger btn-sm" onclick="deleteRow(this)"><i class="fas fa-trash"></i> حذف</button></td>
-            `;
-            table.appendChild(row);
-
-            document.getElementById('name').value = '';
-            document.getElementById('phone').value = '';
-            document.getElementById('address').value = '';
-        }
-
-        function deleteRow(btn){
-            if(confirm('هل تريد حقًا حذف هذا العميل؟')){
-                const tr = btn.closest('tr');
-                tr.parentNode.removeChild(tr);
-            }
-        }
-
-        // دالة بسيطة للهروب من النصوص (سلامة)
-        function escapeHtml(text){
-            return text.replace(/[&<>"']/g, function(m){ return {'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]; });
-        }
-    </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
